--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,14 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-  
+
+    <form id="searchForm">
+      <input type="text" name="searchQuery" placeholder="Search images" autocomplete="off">
+      <button type="submit">Search</button>
+  </form>
+   
+  <ul class="gallery"><span class="loader"></span></ul>
+
     <script type="module" src="./main.js"></script>
   </body>
 </html>
