Changes file js, added file.css

--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,20 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-  <section class="section-form">
     <form id="searchForm">
-      <input type="text" name="searchQuery" placeholder="Search images" autocomplete="off">
+      <input
+        type="text"
+        name="searchQuery"
+        placeholder="Search images"
+        autocomplete="off"
+      />
       <button type="submit">Search</button>
-  </form>
-</section>
-  <section class="section-gallery">
-    <div class="loader"></div>
-    <ul class="gallery"></ul>
-</section>
-  
+    </form>
+
+    <ul class="gallery">
+      <span class="loader"></span>
+    </ul>
+
     <script type="module" src="./main.js"></script>
   </body>
 </html>
