--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,8 @@
       />
       <button type="submit">Search</button>
     </form>
-
-    <ul class="gallery">
-      <span class="loader"></span>
-    </ul>
+    <span class="loader"></span>
+    <ul class="gallery"></ul>
 
     <script type="module" src="./main.js"></script>
   </body>
